--- a/.config/sway/rules.conf
+++ b/.config/sway/rules.conf
@@ -17,8 +17,6 @@ for_window [class="^steam_app_8000$"] move to workspace 6
 for_window [app_id="^gamescope$"] move to workspace 6
 for_window [class="^hl2_linux$"] move to workspace 6
 for_window [class="^steam_app_218640$"] move to workspace 6
-for_window [class="^Firefox$"] inhibit_idle fullscreen
-for_window [app_id="^firefox$"] inhibit_idle fullscreen
 ## launcher workspace rules
 for_window [app_id="^net.lutris.Lutris$"] move to workspace 5
 for_window [class="^steam$"] move to workspace 5
@@ -30,3 +28,6 @@ for_window [class="^DL: language lessons$"] move to workspace 6
 for_window [app_id="^Alacritty$"] move to workspace 2
 for_window [app_id="^mb_warband_linux$"] move to workspace 6
 for_window [app_id="^org.telegram.desktop$"] move to workspace 3
+for_window [class="^steam_app_49520$"] move to workspace 6
+for_window [class="^steam_app_201790$"] move to workspace 6
+
