--- a/.config/sway/config
+++ b/.config/sway/config
@@ -42,7 +42,7 @@ hide_edge_borders --i3 smart
 seat seat0 hide_cursor 3000
 # monitors
 output HDMI-A-1 res 1280x1024@75HZ pos 0 0 transform 270 bg ~/.wallpapers/vert.png fill allow_tearing yes max_render_time off
-output VGA-1 res 1360x768@60HZ pos 1024 500 bg ~/.wallpapers/hori.png fill allow_tearing yes max_render_time off
+output VGA-1 res 1360x768@60HZ pos 1025 500 bg ~/.wallpapers/hori.png fill allow_tearing yes max_render_time off
 # Read `man 5 sway-input` for more information about this section.
 input type:pointer {
     accel_profile "flat" # disable mouse acceleration (enabled by default; to set it manually, use "adaptive" instead of "flat")
@@ -85,13 +85,13 @@ mode "file" {
 }
 
 mode "study" {
-    bindsym p exec "swaypad.py -s big -p 'top' -c 'foot -a anki-pt -e anki-vim portuguese' -n 'anki-pt'", mode "default"
-    bindsym e exec "swaypad.py -s big -p 'top' -c 'foot -a anki-en -e anki-vim english' -n 'anki-en'", mode "default"
-    bindsym o exec "swaypad.py -s big -p 'top' -c 'foot -a anki-ori -e anki-vim origamid' -n 'anki-ori'", mode "default"
-    bindsym m exec "swaypad.py -s big -p 'top' -c 'foot -a anki-mh -e anki-vim math' -n 'anki-mh'", mode "default"
+    bindsym p exec "swaypad.py -s big -p 'top' -c 'foot -a anki-pt -e anki-vim portuguese' -n 'anki-pt'", $mode_reset
+    bindsym e exec "swaypad.py -s big -p 'top' -c 'foot -a anki-en -e anki-vim english' -n 'anki-en'", $mode_reset
+    bindsym o exec "swaypad.py -s big -p 'top' -c 'foot -a anki-ori -e anki-vim origamid' -n 'anki-ori'", $mode_reset
+    bindsym m exec "swaypad.py -s big -p 'top' -c 'foot -a anki-mh -e anki-vim math' -n 'anki-mh'", $mode_resetmode "default"
 
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
+    bindsym Return $mode_reset
+    bindsym Escape $mode_reset
 }
 
 mode "ia" {
@@ -103,19 +103,20 @@ mode "ia" {
     bindsym Escape mode "default"
 }
 
+# TFPB
 mode "scratchpad" {
-    bindsym c exec "swaypad.py -s sm -p 'top-left' -c 'foot -a calculator -e python -q' -n 'calculator'", mode "default"
-    bindsym r exec "swaypad.py -s sm -p 'top' -c 'foot -a countdown -e countdown.py' -n 'countdown'", mode "default"
-    bindsym h exec "swaypad.py -s big -p 'top' -c 'foot -a habits -e vim /home/digo/.vimwiki/habits/index.md' -n 'habits'", mode "default"
-    bindsym n exec "swaypad.py -s big -p 'bottom' -c 'foot -a notes -e vim /home/digo/.vimwiki/notes/index.md' -n 'notes'", mode "default"
-    bindsym b exec "swaypad.py -s big -c 'foot -a monitor -e btop' -n 'monitor'", mode "default"
-    bindsym f exec "swaypad.py -s big -c 'foot -a file-manager -e nnn' -n 'file-manager'", mode "default"
-    bindsym m exec "swaypad.py -s big -c 'foot -a music -e cmus' -n 'music'", mode "default"
-    bindsym w exec "swaypad.py -s big -c 'wasistlos' -n 'wasistlos'", mode "default"
+    bindsym c exec "swaypad.py -s sm -p 'top-left' -c 'foot -a calculator -e python -q' -n 'calculator'", $mode_reset
+    bindsym r exec "swaypad.py -s sm -p 'top' -c 'foot -a countdown -e countdown.py' -n 'countdown'", $mode_reset
+    bindsym h exec "swaypad.py -s big -p 'top' -c 'foot -a habits -e vim /home/digo/.vimwiki/habits/index.md' -n 'habits'", $mode_reset
+    bindsym n exec "swaypad.py -s big -p 'bottom' -c 'foot -a notes -e vim /home/digo/.vimwiki/notes/index.md' -n 'notes'", $mode_reset
+    bindsym b exec "swaypad.py -s big -c 'foot -a monitor -e btop' -n 'monitor'", $mode_reset
+    bindsym f exec "swaypad.py -s big -c 'foot -a file-manager -e nnn' -n 'file-manager'", $mode_reset
+    bindsym m exec "swaypad.py -s big -c 'foot -a music -e cmus' -n 'music'", $mode_reset
+    bindsym w exec "swaypad.py -s big -c 'wasistlos' -n 'wasistlos'", $mode_reset
 
-    bindsym t exec "swaypad.py -s sma -p 'top-left' -c 'foot -a todo -e taskwarrior-tui' -n 'todo'", mode "default"
-    bindsym u exec "swaypad.py -s smf -p 'top' -c 'alacritty --config-file /home/digo/.config/alacritty/scratchpad.toml --class dropdown_term -e zellij attach --create scratch' -n 'dropdown_term'", mode "default"
-    bindsym l exec "swaypad.py -s sm -c 'foot -a lowfi -e lowfi' -n 'lowfi'", mode "default"
+    bindsym t exec "swaypad.py -s sma -p 'top-left' -c 'foot -a todo -e taskwarrior-tui' -n 'todo'", $mode_reset
+    bindsym u exec "swaypad.py -s smf -p 'top' -c 'alacritty --config-file /home/digo/.config/alacritty/scratchpad.toml --class dropdown_term -e zellij attach --create scratch' -n 'dropdown_term'", $mode_reset
+    bindsym l exec "swaypad.py -s sm -c 'foot -a lowfi -e lowfi' -n 'lowfi'", $mode_reset
 #    bindsym r exec --no-startup-id "sway-scratchpad -tmt -atc -d 50%x40% -p 0,20 -- foot -T countdown -e countdown.py", mode "default"
     bindsym g mode "file"; exec $update_mode
     bindsym s mode "study"; exec $update_mode
@@ -184,6 +185,14 @@ mode "screenshot" {
     bindsym Escape $mode_reset
 }
 
+mode "gif_record" {
+    bindsym h exec "regif HDMI-A-1 8", $mode_reset
+    bindsym l exec "regif VGA-1 8", $mode_reset
+
+    bindsym Return $mode_reset
+    bindsym Escape $mode_reset
+}
+
 mode "bar" {
     bindsym r exec "killall -SIGUSR2 waybar", $mode_reset
     bindsym h exec "killall -SIGUSR1 waybar", $mode_reset
@@ -195,7 +204,7 @@ mode "bar" {
 # SAB
 mode "action" {
     bindsym k kill, $mode_reset
-    bindsym r reload, $mode_reset
+    bindsym r reload, mode "default"
     bindsym f fullscreen, $mode_reset
     bindsym n exec "dunstctl close-all", $mode_reset
     bindsym l exec "killall -USR1 swayidle", $mode_reset
@@ -205,6 +214,7 @@ mode "action" {
     bindsym d exec "imdrag ~/Downloads ~/.pictures ~/.wallpapers", $mode_reset
     # extended modes
     bindsym s mode "screenshot"; exec $update_mode
+    bindsym g mode "gif_record"; exec $update_mode
     bindsym b mode "bar"; exec $update_mode
 
     bindsym Return $mode_reset
@@ -292,8 +302,7 @@ floating_modifier $mod normal
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
-
-        swaybar_command "waybar"
+    swaybar_command "waybar"
 }
 
 #for_window [class="^com.github.th_ch.youtube_music$"] move to workspace 5
