--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -42,23 +42,22 @@ border-size = 0pt
 border-color = #00000000
 
 padding-left = 0
-padding-right = 1
+padding-right = 0
 
 module-margin = 1
 
 separator = 
 separator-foreground = ${colors.disabled}
 
-font-0 = "monospace:pixelsize=10;0"
+font-0 = "Leckerli One:pixelsize=12;0"
 
 modules-left = i3
-modules-right = main_mon fs-root fs-home pulseaudio xkeyboard memory cpu date fs-hdd
+modules-right = main_mon fs-hdd fs-home variant date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
 
 [bar/example]
 width = 100%
@@ -84,10 +83,10 @@ module-margin = 1
 separator = 
 separator-foreground = ${colors.disabled}
 
-font-0 = "monospace:pixelsize=10;0"
+font-0 = "Leckerli One:pixelsize=12;0"
 
 modules-left = i3
-modules-right = secondary_mon fs-root fs-home pulseaudio xkeyboard memory cpu date
+modules-right = secondary_mon fs-root pulseaudio variant memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -114,44 +113,6 @@ type = internal/tray
 format-margin = 8pt
 tray-spacing = 16pt
 
-[module/xworkspaces]
-type = internal/xworkspaces
-
-label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
-
-label-occupied = %name%
-label-occupied-padding = 1
-
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
-
-label-empty = %name%
-; this make so workspaces from other monitor don't show up
-pin-workspaces = true
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-mount-1 = /home
-mount-2 = /home/digo/.HDD
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
 [fs-base]
 type = internal/fs
 fixed-values = true
@@ -174,7 +135,7 @@ label-mounted = %{F#707880}HDD%{F-} %{F#eceff4}%percentage_used%%%{F-}
 
 [module/pulseaudio]
 type = internal/pulseaudio
-format-volume-prefix = "VOL "
+format-volume-prefix = "%{F#707880}VOL %{F-}"
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
@@ -198,33 +159,16 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
+format-prefix = "%{F#707880}RAM %{F-}"
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
+format-prefix = "%{F#707880}CPU %{F-}"
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
@@ -232,9 +176,17 @@ interval = 1
 
 date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
+; Available tags:
+;   <label> (default)
+format = HOR <label>
+format-foreground = #707880
 
-label = %date%
-label-foreground = ${colors.primary}
+; Available tokens:
+;   %date%
+;   %time%
+; Default: %date%
+label = %date% %time%
+label-foreground = ${colors.foreground}
 
 [module/main_mon]
 type = custom/ipc
@@ -245,6 +197,11 @@ initial = 1
 type = custom/ipc
 hook-0 = ~/.config/polybar/scripts/secondary_monitor
 initial = 1
+
+[module/variant]
+type = custom/script
+exec = ~/.config/polybar/scripts/variant
+internal = 2
 
 [module/i3]
 type = internal/i3
