--- a/.config/sway/rules.conf
+++ b/.config/sway/rules.conf
@@ -25,9 +25,8 @@ for_window [app_id="^mpv$"] move to workspace 6
 for_window [app_id="^anki$"] move to workspace 3
 for_window [app_id="^portal2_linux$"] move to workspace 6
 for_window [class="^DL: language lessons$"] move to workspace 6
-for_window [app_id="^Alacritty$"] move to workspace 2
 for_window [app_id="^mb_warband_linux$"] move to workspace 6
 for_window [app_id="^org.telegram.desktop$"] move to workspace 3
 for_window [class="^steam_app_49520$"] move to workspace 6
 for_window [class="^steam_app_201790$"] move to workspace 6
-
+for_window [class="^mb_warband_wse2.exe$"] move to workspace 6
